[package]
name = "utilities"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
description = "Contains utilities functions and types"
readme = "README.md"
repository = "https://github.com/gigamono/utilities"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno", "utils"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/utilities"
homepage = "https://gigamono.com"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
nats_lib = { package = "nats", version = "0.15.2" }
diesel =  { version = "1.4.8", features = ["postgres"] }
actix-web = "3"
tokio = { version = "1", features = ["full"] }
hashbrown = "0.11.2"
strum = "0.22.0"
strum_macros = "0.22.0"
uuid = "0.8.2"

[lib]
name = "utilities"
path = "lib/lib.rs"
