[package]
name = "utilities"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <steve@gigamono.com>"]
description = "Contains utilities functions and types"
readme = "README.md"
repository = "https://github.com/gigamono/utilities"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno", "utils"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/utilities"
homepage = "https://gigamono.com"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = { path = "../deno/core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
nats = "0.15.2"
diesel =  { version = "1.4.8", features = ["postgres"] }
actix-web = "3"
tokio = { version = "1", features = ["full"] }
strum = "0.22.0"
strum_macros = "0.22.0"
uuid = "0.8.2"
bincode = "1.3.3"
anyhow = "1.0"

[lib]
name = "utilities"
path = "lib/lib.rs"
