[package]
name = "utilities"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <steve@gigamono.com>"]
description = "Contains utilities functions and types"
readme = "README.md"
repository = "https://github.com/gigamono/utilities"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno", "utils"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/utilities"
homepage = "https://gigamono.com"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.108.0"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14.15", features = ["full"]}
serde_yaml = "0.8"
async-nats = "0.10.1"
diesel =  { version = "1.4.8", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
strum = "0.22.0"
strum_macros = "0.22.0"
uuid = "0.8.2"
anyhow = "1.0"
parking_lot = "0.11.2"
log = "0.4.14"

[lib]
name = "utilities"
path = "lib/lib.rs"
